tests/fail/zero_len.stderr
error: `len` must be positive
 --> tests/fail/zero_len.rs:9:33
  |
9 |     let _wave = sine_wave!(len: 0);
  |                                 ^
